welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: value Int is not a member of String
    val decalage = litMessage().Int
                                ^